Fix overflow issue improve responsiveness

--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body{
 }
 .color1{
    
-    height:100rem;
-    width:50%;
+    height:100vh;
+    width:50vw;
     background-color: rgb(245, 111, 1);
     position: relative;
 
@@ -33,8 +33,8 @@ body{
 }
 .color2{
    background-color: black;
-    height:100rem;
-    width:50%;
+    height:100vh;
+    width:50vw;
     position: relative;
 
 }
@@ -311,16 +311,27 @@ body{
 
 
 .platerotate{
+    position:absolute;
+    top:60%;
+    left:30%;
     
-    background-color: transparent;
-    height:600px;
-    width:600px;
+    /*transform: translate(-30%,-30%);*/
     
-    position: fixed;
-                                        top:50%;
-    left:29%;
+    max-height:600px;
+    max-width:600px;
+    height:60vw;
+    width:60vw;
+    bottom:-30vw;
     
-    border-radius: 300px;
+ 
+    
+   
+    background-color: aliceblue;
+    
+    
+   
+    
+    border-radius: 50%;
     transition: transform 3s;
     
     animation:platerotateanimation   ease-in-out forwards ;
@@ -354,7 +365,7 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     height:18rem;
-    
+    object-fit: cover;
     
 }
 
@@ -688,7 +699,7 @@ margin:20px 80px 20px 120px;
 
 
 
-
+/*
     .platerotate{
     
         
@@ -706,7 +717,8 @@ margin:20px 80px 20px 120px;
     
        
     }
-   
+   */
+
     .para1{
          
          font-size: 15px;
@@ -966,7 +978,7 @@ margin:20px 80px 20px 120px;
 
 
 
-
+/*
 
     .platerotate{
     
@@ -985,7 +997,7 @@ margin:20px 80px 20px 120px;
     
        
     }
-
+*/
    
      
    /* .restaurant{
@@ -1132,7 +1144,7 @@ margin:20px 80px 20px 120px;
 }
 @media (min-width:901px) and (max-width:1024px){
 
-    
+    /*
         .platerotate{
     
         
@@ -1165,7 +1177,8 @@ margin:20px 80px 20px 120px;
         
     }
     
-    
+    */
+
 
 }
 
@@ -1186,7 +1199,7 @@ margin:20px 80px 20px 120px;
         
         
     }
-
+/*
      .platerotate{
     
         
@@ -1205,7 +1218,7 @@ margin:20px 80px 20px 120px;
        
     }
 
-    
+    */
 }
 
 @media (min-width:1281px) and (max-width:1360px){
@@ -1228,7 +1241,7 @@ margin:20px 80px 20px 120px;
         
     }
 
-     .platerotate{
+    /* .platerotate{
     
         
         height:200px;
@@ -1246,12 +1259,12 @@ margin:20px 80px 20px 120px;
        
     }
    
-    
+    */
 
 }
 @media (min-width:1361px) and (max-width:1500px){
 
-
+/*
     .platerotate{
     
         
@@ -1269,11 +1282,11 @@ margin:20px 80px 20px 120px;
     
        
     }
-   
+   */
 }
 @media (min-height:1100px) and (max-height:1280px){
 
-    .platerotate{
+  /*  .platerotate{
     
         
         height:200px;
@@ -1292,7 +1305,7 @@ margin:20px 80px 20px 120px;
     }
 
 
-
+*/
 }
 @media (min-height:1201px) and (max-height:1450px){
 
@@ -1312,7 +1325,7 @@ margin:20px 80px 20px 120px;
         
         
     }
-     .platerotate{
+    /* .platerotate{
     
         
         height:200px;
@@ -1328,7 +1341,8 @@ margin:20px 80px 20px 120px;
         animation:platerotateanimation   ease-in-out forwards ;
     
        
-    }
+    }*/
+
 
    .restaurant{
            color:rgb(252, 251, 251);
@@ -1423,7 +1437,7 @@ margin:20px 20px 20px 120px;
     .intro6{
         width:10rem;
     }
-    .platerotate{
+   /* .platerotate{
     
         
         height:200px;
@@ -1445,13 +1459,13 @@ margin:20px 20px 20px 120px;
     border-radius: 50%;
     margin: 0;
     transition: all 0.9s;
+}*/
 }
-}
-
 /*
+
 @media(max-height: 750px){
 
-          .platerotate{
+        /*  .platerotate{
     
         
         height:100px;
@@ -1468,6 +1482,7 @@ margin:20px 20px 20px 120px;
     
        
     }
+
     .right{
     
     width:30px;
@@ -1520,4 +1535,6 @@ margin:20px 20px 20px 120px;
 
 
 }
-    */
+
+*/
+    
